📸 Upload images on server
Category images now can be uploaded and readed from server!
